Revamp team layout.

--- a/about.html
+++ b/about.html
@@ -69,88 +69,72 @@
       <section class="section section--alt">
         <div class="wrap">
           <h2>Our Team</h2>
-          <h3>Group Fitness Leaders</h3>
-          <ul class="listings row">
-            <li class="listings__item col col--6md">
-              <ul class="listings row team" >
-                <li class="listings__item col col--6md">
-                <img src="img/hero-first-class-teacher.jpg" alt="image of first class teacher">
-                </li>
-                <li class="listings__item col col--6md">
-               <p>Sheiful Zakaria</p>
-               <p>Credentials</p>
-               <ul>
-                 <li>CFES-WT</li>
-                 <li>TRX, KEISER & SCHWINN</li>
-               </ul>
-               <p>Classes</p>
-               <ul>
-                 <li>Cardio/Strength Formats: Powerwave, The Works, Buff Body, 3D Glutes, 3D Core, Stick & Stones, Knockout</li>
-                 <li>Group Cycling</li>
-               </ul>
-                </li>
-              </ul>
-            </li>
-            <li class="listings__item col col--6md">
-                  <ul class="listings row team" >
-                    <li class="listings__item col col--6md">
-                     <img src="img/hero-second-class-teacher.jpg" alt="image of second class teacher">
-                    </li>
-                    <li class="listings__item col col--6md">
-                    <p>Michelle Barrett</p>
-                    <p>Credentials</p>
-                    <ul>
-                      <li>BA Human Kinetics (UBC)</li>
-                      <li>BCRPA-SFL</li>
-                    </ul>
-                    <p>Classes</p>
-                    <ul>
-                      <li>Cardio/Strength: The Works, Yuga, Body Glide, 3D Core, 3D Glutes, Pump + Jump</li>
-                      <li>Dance formats: Pound</li>
-                    </ul>
-                    </li>
-                  </ul>
-            </li>
-          </ul>
-          <h3>Personal Trainers</h3>
-          <ul class="listings row">
-            <li class="listings__item col col--6md">
-              <ul class="listings row team" >
-                <li class="listings__item col col--6md">
-                <img src="img/hero-first-personal-trainer.jpg" alt="image of first personal trainer">
-                </li>
-                <li class="listings__item col col--6md">
-               <p> Jamie Carretas</p>
-               <ul>
-                 <li>CanFitPro Certified Personal Trainer</li>
-                 <li>TRX Certified Trainer</li>
-                 <li>Sandbell Training</li>
-                 <li>CPR & AED Certified</li>
-                 <li>dotFIT Certification</li>
-               </ul>
-
-                </li>
-              </ul>
-            </li>
-            <li class="listings__item col col--6md">
-                  <ul class="listings row team">
-                    <li class="listings__item col col--6md ">
-                     <img src="img/hero-second-personal-trainer.jpg" alt="image of second personal trainer">
-                    </li>
-                    <li class="listings__item col col--6md">
-                    <p> Josh Jackman</p>
-                    <ul>
-                      <li>NASM Certified Personal Trainer</li>
-                      <li>Sports Performance Diploma – Camosun College</li>
-                      <li>Agatsu kettlebell certification</li>
-                      <li>TRX Rip Trainer</li>
-                      <li>CPR & AED Certified</li>
-                      <li>TRX Suspension Trainer</li>
-                    </ul>
-                    </li>
-                  </ul>
-            </li>
-          </ul>
+          <div class="team-group row">
+            <div class="team-item col col--6md">
+              <div class="team-item__content">
+                <div class="team-item__photo">
+                  <img src="img/about-nam.jpg" alt="Nam Zakaria" class="img-responsive">
+                </div>
+                <div class="team-item__info">
+                  <p>
+                    <strong>Nam Zakaria</strong><br>
+                    Founder
+                  </p>
+                  <p>
+                    Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and nutrition.
+                  </p>
+              </div>
+              </div>
+            </div>
+            <div class="team-item col col--6md">
+              <div class="team-item__content">
+                <div class="team-item__photo">
+                  <img src="img/about-michelle.jpg" alt="Michelle Barret" class="img-responsive">
+                </div>
+                <div class="team-item__info">
+                  <p>
+                    <strong>Michelle Barret</strong><br>
+                    Trainer
+                  </p>
+                  <p>
+                    Michelle
+                  </p>
+              </div>
+              </div>
+            </div>
+            <div class="team-item col col--6md">
+              <div class="team-item__content">
+                <div class="team-item__photo">
+                  <img src="img/about-jal.jpg" alt="Jal Nasr" class="img-responsive">
+                </div>
+                <div class="team-item__info">
+                  <p>
+                    <strong>Jal Nasr</strong><br>
+                    Trainer
+                  </p>
+                  <p>
+                    Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and nutrition.
+                  </p>
+              </div>
+              </div>
+            </div>
+            <div class="team-item col col--6md">
+              <div class="team-item__content">
+                <div class="team-item__photo">
+                  <img src="img/about-josh.jpg" alt="Josh Jackman" class="img-responsive">
+                </div>
+                <div class="team-item__info">
+                  <p>
+                    <strong>Josh Jackman</strong><br>
+                    Trainer
+                  </p>
+                  <p>
+                    Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and nutrition.
+                  </p>
+              </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
