Update team content.

--- a/about.html
+++ b/about.html
@@ -80,8 +80,8 @@
                     <strong>Nam Zakaria</strong><br>
                     Founder
                   </p>
-                  <p>
-                    Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and nutrition.
+                  <p class="team-item__bio">
+                    Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and nutrition. His qualifications include CPTS, CrossFit, TRX and CFES-WT.
                   </p>
               </div>
               </div>
@@ -96,8 +96,8 @@
                     <strong>Michelle Barret</strong><br>
                     Trainer
                   </p>
-                  <p>
-                    Michelle
+                  <p class="team-item__bio">
+                    Michelle is a fitness coach with over 10 years of experience. She has a BA in Human Kinetics from UBC and is certified BCRPA-SFL.
                   </p>
               </div>
               </div>
@@ -112,8 +112,8 @@
                     <strong>Jal Nasr</strong><br>
                     Trainer
                   </p>
-                  <p>
-                    Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and nutrition.
+                  <p class="team-item__bio">
+                    Jal is trainer with over 5 years of experience. He is certified in CanFitPro, TRX, Sandbell, CPR &amp; AED and dotFIT.
                   </p>
               </div>
               </div>
@@ -128,8 +128,8 @@
                     <strong>Josh Jackman</strong><br>
                     Trainer
                   </p>
-                  <p>
-                    Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and nutrition.
+                  <p class="team-item__bio">
+                    Josh is a graduate from Camosun College with a Sports Performance Diploma. He is certified in NASM, Agatsu kettlebell, TRX and CPR &amp; AED.
                   </p>
               </div>
               </div>
