--- a/events.html
+++ b/events.html
@@ -59,25 +59,50 @@
       <section class="section">
         <div class="wrap">
           <h2>Upcoming Events</h2>
-          <ul>
-              <li>Hot Hathat Songs and Gongs on Sunday</li>
-              <li>Mighty Life running season starts from March 3rd to May 15th</li>
-              <li>Help the kids throught donation in fitness members on April 5th</li>
-              <li>Three essential workshops to teach you how to relax your muscle on April 8th</li>
+          <ul class="listings">
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <strong>Workshop: Hatha Yoga</strong>
+                March 9, 2018 from 1:00pm - 3:00pm<br>
+                Join guest trainers Natalie and Haley for 90 minutes of candlelit gentle Hatha Yoga. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. Suitable for all levels. Pre-registration is required as class size is limited.
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content">
+                <strong>Workshop: Relaxation</strong>
+                March 23, 2018 from 2:00pm - 3:30pm<br>
+                Learn how to relax your muscles with special trainer Takeshi Kovacs. Suitable for all levels. Pre-registration is required as class size is limited.
+              </p>
+            </li>
           </ul>
-
         </div>
       </section>
       <section class="section section--alt">
         <div class="wrap">
           <h2>Past Events</h2>
-          <ul>
-              <li>GIVING BACK - sign the free lottery on December 24 to win the Apple Mac!</li>
-              <li>Free Body test and plan for you between November 13 to 18, 2017</li>
-              <li>Sign up for two weeks trail for unlimited workshops on October 8th</li>
-              <li>Summer sports available for sign up on August 12th</li>
+          <ul class="listings">
+            <li class="listings__item">
+              <p class="listings__item-content listings__item-content--alt">
+                <strong>Merchandise Sale</strong>
+                50% off everything for a week!<br>
+                January 22 - 26, 2018
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content listings__item-content--alt">
+                <strong>Free Body Test</strong>
+                November 13 - 18, 2017<br>
+                Come in and sign up for a free body test and see the status of your overall health.
+              </p>
+            </li>
+            <li class="listings__item">
+              <p class="listings__item-content listings__item-content--alt">
+                <strong>Holiday Party</strong>
+                December 15, 2017<br>
+                Our gym transforms into a winter party. Have free drinks and food right after your workout with a gentle holiday vibe.
+              </p>
+            </li>
           </ul>
-
         </div>
       </section>
     </div>
