--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Community</h2>
-          <h3>Hot Hathat Songs and Gongs</h3>
-          <img src="img/yoga-events.jpg" alt="yuga events images">
+          <h2>Events</h2>
+          <h3>Workshop: Hatha Yoga</h3>
           <p>
-            Join Natalie, Haley, 90 Minutes of candlelit gentle Hatha Yoga, live music & the healing vibrations of crystal bowls played by sound healer Chase. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. This workshop is suited for all levels. Pre-Registration required, as class size is limited.
+            March 9, 2018 from 1:00pm - 3:00pm
           </p>
-          <h4>Date</h4>
-          <p>Sunday, March 18 to Sunday, March 18
+          <p>
+            <img src="img/event-yoga.jpg" alt="Hatha Yoga" class="img-responsive">
           </p>
-          <p>1:00 PM - 3:00 PM</p>
-
+          <p>
+            Join guest trainers Natalie and Haley for 90 minutes of candlelit gentle Hatha Yoga. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. Suitable for all levels. Pre-registration is required as class size is limited.
+          </p>
           <p>
             <a href="events.html" class="btn">
               View All Events
