add styleguide and citation files

--- a/citations.html
+++ b/citations.html
@@ -21,13 +21,13 @@
         <nav class="sg-nav">
           <ul class="sg-nav__list">
             <li>
-              <a href="index.html" class="sg-nav__item">Style Guide</a>
+              <a href="styleguide.html" class="sg-nav__item">Style Guide</a>
             </li>
             <li>
-              <a href="wireframes.html" class="sg-nav__item sg-nav__item--page sg-nav__item--active">Wireframes</a>
+              <a href="wireframes.html" class="sg-nav__item sg-nav__item--page">Wireframes</a>
             </li>
             <li>
-              <a href="citations.html" class="sg-nav__item sg-nav__item--page">Citations</a>
+              <a href="citations.html" class="sg-nav__item sg-nav__item--page sg-nav__item--active">Citations</a>
             </li>
           </ul>
         </nav>
@@ -36,17 +36,16 @@
     <div class="sg-content">
       <div class="sg-content-wrap">
         <h1>
-          Wireframes
+          Citations
         </h1>
-        <p>
-          <strong>Task:</strong> Sign up for membership.<br>
-          For smartwatch, smartphone and smart TV. Click the image to enlarge.
-        </p>
-        <p>
-          <a href="../img/wireframes.jpg" target="_blank">
-            <img src="../img/wireframes.jpg" alt="Wireframes" class="img-responsive">
-          </a>
-        </p>
+        <ul class="sg-citations">
+          <li>
+            Google. &ldquo;Google/Material-Design-Icons.&rdquo; <em>GitHub,</em> 11 Jan. 2018, <a href="https://github.com/google/material-design-icons" target="_blank">github.com/google/material-design-icons</a>.
+          </li>
+          <li>
+            Kristoferjoseph. &ldquo;Kristoferjoseph/Flexboxgrid.&rdquo; <em>GitHub</em>, 13 Jan. 2017, <a href="https://github.com/kristoferjoseph/flexboxgrid" target="_blank">github.com/kristoferjoseph/flexboxgrid</a>.
+          </li>
+        </ul>
         <footer>
           <p class="sg-footer-content">
             Created by Charlie Chao and Lance Zheng for IAT339.
