fix error, adding citations

--- a/citations.html
+++ b/citations.html
@@ -5,9 +5,9 @@
   <title>Mighty Life Fitness</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One%7COpen+Sans:400,400i,700" rel="stylesheet">
-  <link href="../css/normalize.css" rel="stylesheet">
-  <link href="../css/main.css" rel="stylesheet">
-  <link href="../css/styleguide.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/styleguide.css" rel="stylesheet">
 </head>
 <body>
   <main class="sg-wrap">
@@ -44,6 +44,14 @@
           </li>
           <li>
             Kristoferjoseph. &ldquo;Kristoferjoseph/Flexboxgrid.&rdquo; <em>GitHub</em>, 13 Jan. 2017, <a href="https://github.com/kristoferjoseph/flexboxgrid" target="_blank">github.com/kristoferjoseph/flexboxgrid</a>.
+          </li>
+          <li>
+              Hero image from Calhoun &ldquo;PERSONAL TRAINING&rdquo; <em>Calhoun</em>, 2018, <a href="http://www.calhounbeachfitness.com/services/personal-training/" target="_blank">http://www.calhounbeachfitness.com/services/personal-training/
+            </a>.
+          </li>
+          <li>
+            Moksha Yoga Vancouver &ldquo;Hot Hatha Songs and Gongs&rdquo; <em>  Moksha Yoga Vancouver</em>, 2018 <a href="https://vancouver.mokshayoga.ca/event/hot-hatha-songs-and-gongs/" target="_blank">https://vancouver.mokshayoga.ca/event/hot-hatha-songs-and-gongs/
+            </a>.
           </li>
         </ul>
         <footer>
