--- a/styleguide.html
+++ b/styleguide.html
@@ -5,9 +5,9 @@
   <title>Mighty Life Fitness</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One%7COpen+Sans:400,400i,700" rel="stylesheet">
-  <link href="../css/normalize.css" rel="stylesheet">
-  <link href="../css/main.css" rel="stylesheet">
-  <link href="../css/styleguide.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/styleguide.css" rel="stylesheet">
 </head>
 <body>
   <main class="sg-wrap">
