Fix about team bio to avoid hanging words

--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                     Trainer
                   </p>
                   <p class="team-item__bio">
-                    Michelle is a fitness coach with over 10 years of experience. She has a BA in Human Kinetics from UBC and is certified BCRPA-SFL.
+                    Michelle is a fitness coach with over 10 years of experience. She has a BA in Human Kinetics from UBC and is certified BCRPA-SFL, TRX, CPR &amp; AED.
                   </p>
               </div>
               </div>
@@ -129,7 +129,7 @@
                     Trainer
                   </p>
                   <p class="team-item__bio">
-                    Josh is a graduate from Camosun College with a Sports Performance Diploma. He is certified in NASM, Agatsu kettlebell, TRX and CPR &amp; AED.
+                    Josh is a graduate from Camosun College with a Sports Performance Diploma. He is certified in NASM, Agatsu kettlebell, CPR &amp; AED.
                   </p>
               </div>
               </div>
