--- a/citations.html
+++ b/citations.html
@@ -46,7 +46,11 @@
             Kristoferjoseph. &ldquo;Kristoferjoseph/Flexboxgrid.&rdquo; <em>GitHub</em>, 13 Jan. 2017, <a href="https://github.com/kristoferjoseph/flexboxgrid" target="_blank">github.com/kristoferjoseph/flexboxgrid</a>.
           </li>
           <li>
-              Hero image from Calhoun &ldquo;PERSONAL TRAINING&rdquo; <em>Calhoun</em>, 2018, <a href="http://www.calhounbeachfitness.com/services/personal-training/" target="_blank">http://www.calhounbeachfitness.com/services/personal-training/
+              hero images from Calhoun &ldquo;PERSONAL TRAINING&rdquo; <em>Calhoun</em>, 2018, <a href="http://www.calhounbeachfitness.com/services/personal-training/" target="_blank">http://www.calhounbeachfitness.com/services/personal-training/
+            </a>.
+          </li>
+          <li>
+            hero image from Yogamatters &ldquo;Festive Yoga Events Calendar&rdquo; <em>Yogamatters</em>, November 16th, 2016, <a href="https://www.yogamatters.com/blog/festive-yoga-events-calendar/" target="_blank">https://www.yogamatters.com/blog/festive-yoga-events-calendar/
             </a>.
           </li>
           <li>
