Change submit button to regular style in Contact

--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
               <textarea id="message" name="message" rows="6" required placeholder="Ask us a question..."></textarea>
             </div>
             <div class="form-group">
-              <input type="submit" class="btn btn--primary">
+              <input type="submit" class="btn">
             </div>
           </form>
         </div>
