--- a/styleguide.html
+++ b/styleguide.html
@@ -238,7 +238,7 @@
             Use professionally shot high-quality images for hero backgrounds and figures.
           </p>
           <p>
-            <img src="../img/imagery.jpg" alt="Imagery for MLF." class="img-responsive">
+            <img src="img/imagery.jpg" alt="Imagery for MLF." class="img-responsive">
           </p>
         </section>
         <section>
@@ -250,7 +250,7 @@
             Use the <a href="https://material.io/icons/" target="_blank">Material Design icon set</a>. Icons should be used alongside labels. They shouldn't be used alone unless it's part of an image.
           </p>
           <p>
-            <img src="../img/icons.png" alt="Example usage of icons." class="img-responsive">
+            <img src="img/icons.png" alt="Example usage of icons." class="img-responsive">
           </p>
         </section>
         <section>
