Events/landing — mention to register in-person

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <img src="img/event-yoga.jpg" alt="Hatha Yoga" class="img-responsive">
           </p>
           <p>
-            Join guest trainers Natalie and Haley for 90 minutes of candlelit gentle Hatha Yoga. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. Suitable for all levels. Pre-registration is required as class size is limited.
+            Join guest trainers Natalie and Haley for 90 minutes of candlelit gentle Hatha Yoga. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. Suitable for all levels. Pre-registration in person is required as class size is limited.
           </p>
           <p>
             <a href="events.html" class="btn">
