--- a/events.html
+++ b/events.html
@@ -64,14 +64,14 @@
               <p class="listings__item-content">
                 <strong>Workshop: Hatha Yoga</strong>
                 March 9, 2018 from 1:00pm - 3:00pm<br>
-                Join guest trainers Natalie and Haley for 90 minutes of candlelit gentle Hatha Yoga. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. Suitable for all levels. Pre-registration is required as class size is limited.
+                Join guest trainers Natalie and Haley for 90 minutes of candlelit gentle Hatha Yoga. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. Suitable for all levels. Pre-registration in person is required as class size is limited.
               </p>
             </li>
             <li class="listings__item">
               <p class="listings__item-content">
                 <strong>Workshop: Relaxation</strong>
                 March 23, 2018 from 2:00pm - 3:30pm<br>
-                Learn how to relax your muscles with special trainer Takeshi Kovacs. Suitable for all levels. Pre-registration is required as class size is limited.
+                Learn how to relax your muscles with special trainer Takeshi Kovacs. Suitable for all levels. Pre-registration is required as class size is limited.Pre-registration in person is required as class size is limited.
               </p>
             </li>
           </ul>
@@ -92,14 +92,14 @@
               <p class="listings__item-content listings__item-content--alt">
                 <strong>Free Body Test</strong>
                 November 13 - 18, 2017<br>
-                Come in and sign up for a free body test and see the status of your overall health.
+                Come in and sign up for a free body test and see the status of your overall health.Pre-registration in person is required.
               </p>
             </li>
             <li class="listings__item">
               <p class="listings__item-content listings__item-content--alt">
                 <strong>Holiday Party</strong>
                 December 15, 2017<br>
-                Our gym transforms into a winter party. Have free drinks and food right after your workout with a gentle holiday vibe.
+                Our gym transforms into a winter party. Have free drinks and food right after your workout with a gentle holiday vibe.Pre-registration in person is required as party size is limited.
               </p>
             </li>
           </ul>
