--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
           <p>
             We offer three options for monthly subscriptions. By registering online, you'll immediately get benefits like access to the gym during open hours and <strong>a free personal training session</strong> every 3rd month.
           </p>
+          <div class="listings row">
+            <div class="listings__item col col--4md">
+              <div class="listings__item-content">
+                <span class="listings__item-title">$64/mo</span>
+                <span class="listings__item-prop">Month-by-month</span>
+              </div>
+            </div>
+            <div class="listings__item col col--4md">
+              <div class="listings__item-content">
+                <span class="listings__item-title">$56/mo</span>
+                <span class="listings__item-prop">6 months</span>
+                <span class="listings__item-prop"></span>
+              </div>
+            </div>
+            <div class="listings__item col col--4md">
+              <div class="listings__item-content">
+                <span class="listings__item-title">$48/mo</span>
+                <span class="listings__item-prop">12 months</span>
+              </div>
+            </div>
+          </div>
           <p>
             <a href="join.html#membership" class="btn">
               Learn More
