fix some part on styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -21,46 +21,46 @@
         <nav class="sg-nav">
           <ul class="sg-nav__list">
             <li>
-              <a href="index.html" class="sg-nav__item sg-nav__item--active">Style Guide</a>
+              <a href="styleguide.html" class="sg-nav__item sg-nav__item--active">Style Guide</a>
             </li>
             <li>
-              <a href="index.html#overview" class="sg-nav__item sg-nav__item--anchor">Overview</a>
+              <a href="styleguide.html#overview" class="sg-nav__item sg-nav__item--anchor">Overview</a>
             </li>
             <li>
-              <a href="index.html#colours" class="sg-nav__item sg-nav__item--anchor">Colours</a>
+              <a href="styleguide.html#colours" class="sg-nav__item sg-nav__item--anchor">Colours</a>
             </li>
             <li>
-              <a href="index.html#typography" class="sg-nav__item sg-nav__item--anchor">Typography</a>
+              <a href="styleguide.html#typography" class="sg-nav__item sg-nav__item--anchor">Typography</a>
             </li>
             <li>
-              <a href="index.html#imagery" class="sg-nav__item sg-nav__item--anchor">Imagery</a>
+              <a href="styleguide.html#imagery" class="sg-nav__item sg-nav__item--anchor">Imagery</a>
             </li>
             <li>
-              <a href="index.html#icons" class="sg-nav__item sg-nav__item--anchor">Icons</a>
+              <a href="styleguide.html#icons" class="sg-nav__item sg-nav__item--anchor">Icons</a>
             </li>
             <li>
-              <a href="index.html#paragraph" class="sg-nav__item sg-nav__item--anchor">Paragraph</a>
+              <a href="styleguide.html#paragraph" class="sg-nav__item sg-nav__item--anchor">Paragraph</a>
             </li>
             <li>
-              <a href="index.html#hyperlink" class="sg-nav__item sg-nav__item--anchor">Hyperlink</a>
+              <a href="styleguide.html#hyperlink" class="sg-nav__item sg-nav__item--anchor">Hyperlink</a>
             </li>
             <li>
-              <a href="index.html#lists" class="sg-nav__item sg-nav__item--anchor">Lists</a>
+              <a href="styleguide.html#lists" class="sg-nav__item sg-nav__item--anchor">Lists</a>
             </li>
             <li>
-              <a href="index.html#buttons" class="sg-nav__item sg-nav__item--anchor">Buttons</a>
+              <a href="styleguide.html#buttons" class="sg-nav__item sg-nav__item--anchor">Buttons</a>
             </li>
             <li>
-              <a href="index.html#form" class="sg-nav__item sg-nav__item--anchor">Form</a>
+              <a href="styleguide.html#form" class="sg-nav__item sg-nav__item--anchor">Form</a>
             </li>
             <li>
-              <a href="index.html#nav" class="sg-nav__item sg-nav__item--anchor">Navigation</a>
+              <a href="styleguide.html#nav" class="sg-nav__item sg-nav__item--anchor">Navigation</a>
             </li>
             <li>
-              <a href="index.html#listings" class="sg-nav__item sg-nav__item--anchor">Listings</a>
+              <a href="styleguide.html#listings" class="sg-nav__item sg-nav__item--anchor">Listings</a>
             </li>
             <li>
-              <a href="index.html#grid" class="sg-nav__item sg-nav__item--anchor">Grid</a>
+              <a href="styleguide.html#grid" class="sg-nav__item sg-nav__item--anchor">Grid</a>
             </li>
             <li>
               <a href="wireframes.html" class="sg-nav__item sg-nav__item--page">Wireframes</a>
@@ -115,8 +115,8 @@
               <span class="sg-color__value">#41C734</span>
             </li>
             <li class="sg-color sg-color--sea-blue">
-              <span class="sg-color__name">$color-sea-blue</span>
-              <span class="sg-color__value">#2209E5</span>
+              <span class="sg-color__name">$color-dark-blue</span>
+              <span class="sg-color__value">#1377d5</span>
             </li>
             <li class="sg-color sg-color--magma-red">
               <span class="sg-color__name">$color-magma-red</span>
