--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
           <a href="index.html" class="logo">
             Mighty Life<br> Fitness
           </a>
-          <nav class="nav">
+          <nav class="nav" role="navigation">
             <ul class="nav__list">
               <li class="nav__item">
                 <a href="join.html" class="nav-btn">Join Us</a>
@@ -124,6 +124,12 @@
         </p>
         <p class="footer_copyright">
           &copy; 2018
+        </p>
+        <p class="footer__cta">
+
+          <a href="styleguide.html">
+            Styleguide and Citation available here
+          </a>
         </p>
       </div>
     </footer>
