--- a/register2.html
+++ b/register2.html
@@ -116,6 +116,12 @@
         <p class="footer_copyright">
           &copy; 2018
         </p>
+        <p class="footer__cta">
+
+          <a href="styleguide.html">
+            Styleguide and Citation available here
+          </a>
+        </p>
       </div>
     </footer>
   </main>
