--- a/styleguide.html
+++ b/styleguide.html
@@ -14,11 +14,11 @@
     <div class="sg-sidebar">
       <header class="sg-sidebar__content">
         <h1 class="sg-sidebar__logo">
-          <a href="index.html">
+          <a href="styleguide.html">
             Mighty Life Fitness
           </a>
         </h1>
-        <nav class="sg-nav">
+        <nav class="sg-nav" role="navigation">
           <ul class="sg-nav__list">
             <li>
               <a href="styleguide.html" class="sg-nav__item sg-nav__item--active">Style Guide</a>
