--- a/join.html
+++ b/join.html
@@ -16,7 +16,7 @@
           <a href="index.html" class="logo">
             Mighty Life<br> Fitness
           </a>
-          <nav class="nav" role="navigation">
+          <nav class="nav" >
             <ul class="nav__list">
               <li class="nav__item">
                 <a href="join.html" class="nav-btn -active">Join Us</a>
