--- a/styleguide.html
+++ b/styleguide.html
@@ -18,7 +18,7 @@
             Mighty Life Fitness
           </a>
         </h1>
-        <nav class="sg-nav" role="navigation">
+        <nav class="sg-nav" >
           <ul class="sg-nav__list">
             <li>
               <a href="styleguide.html" class="sg-nav__item sg-nav__item--active">Style Guide</a>
