add image column

--- a/join.html
+++ b/join.html
@@ -103,6 +103,27 @@
               Free parking
             </li>
           </ul>
+          <div class="listings row">
+            <div class="listings__item col col--4md">
+              <div class="listings__item-content">
+                <span class="listings__item-title">$64/mo</span>
+                <span class="listings__item-prop">Month-by-month</span>
+              </div>
+            </div>
+            <div class="listings__item col col--4md">
+              <div class="listings__item-content">
+                <span class="listings__item-title">$56/mo</span>
+                <span class="listings__item-prop">6 months</span>
+                <span class="listings__item-prop"></span>
+              </div>
+            </div>
+            <div class="listings__item col col--4md">
+              <div class="listings__item-content">
+                <span class="listings__item-title">$48/mo</span>
+                <span class="listings__item-prop">12 months</span>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="section section--alt">
