--- a/join.html
+++ b/join.html
@@ -103,24 +103,21 @@
               Free parking
             </li>
           </ul>
+          <h2 id="Gym--Environment">Gym Environment</h2>
           <div class="listings row">
             <div class="listings__item col col--4md">
-              <div class="listings__item-content">
-                <span class="listings__item-title">$64/mo</span>
-                <span class="listings__item-prop">Month-by-month</span>
+              <div class="listings__image-content">
+                <img src="img/gym-environment1.jpg" alt="gym environment1" class="img-responsive">
               </div>
             </div>
             <div class="listings__item col col--4md">
-              <div class="listings__item-content">
-                <span class="listings__item-title">$56/mo</span>
-                <span class="listings__item-prop">6 months</span>
-                <span class="listings__item-prop"></span>
+              <div class="listings__image-content ">
+                <img src="img/gym-environment2.jpg" alt="gym environment1" class="img-responsive">
               </div>
             </div>
             <div class="listings__item col col--4md">
-              <div class="listings__item-content">
-                <span class="listings__item-title">$48/mo</span>
-                <span class="listings__item-prop">12 months</span>
+              <div class="listings__image-content">
+                <img src="img/gym-environment3.jpg" alt="gym environment1" class="img-responsive">
               </div>
             </div>
           </div>
