--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             March 9, 2018 from 1:00pm - 3:00pm
           </p>
           <p>
-            <img src="img/event-yoga.jpg" alt="Hatha Yoga" class="img-responsive">
+            <img src="img/event-picture.jpg" alt="Hatha Yoga" class="img-responsive">
           </p>
           <p>
             Join guest trainers Natalie and Haley for 90 minutes of candlelit gentle Hatha Yoga. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. Suitable for all levels. Pre-registration in person is required as class size is limited.
