update styleguide image

--- a/styleguide.html
+++ b/styleguide.html
@@ -238,7 +238,7 @@
             Use professionally shot high-quality images for hero backgrounds and figures.
           </p>
           <p>
-            <img src="img/imagery.jpg" alt="Imagery for MLF." class="img-responsive">
+            <img src="img/imagery-new.jpg" alt="Imagery for MLF." class="img-responsive">
           </p>
         </section>
         <section>
