update image in styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -237,8 +237,32 @@
           <p>
             Use professionally shot high-quality images for hero backgrounds and figures.
           </p>
+          <h3 id="figures">
+            Figures
+          </h3>
           <p>
             <img src="img/imagery-new.jpg" alt="Imagery for MLF." class="img-responsive">
+          </p>
+          <h3 id="navagation--backgrounds">
+             Navagation Background
+          </h3>
+          <p>
+            <img src="img/hero-about.jpg" alt="hero page in about page." class="img-responsive">
+          </p>
+          <p>
+            <img src="img/hero-contact.jpg" alt="hero page in contact page." class="img-responsive">
+          </p>
+          <p>
+            <img src="img/hero-events.jpg" alt="hero page in events page." class="img-responsive">
+          </p>
+          <p>
+            <img src="img/hero-join.jpg" alt="hero page in join us page." class="img-responsive">
+          </p>
+          <p>
+            <img src="img/hero-landing.jpg" alt="hero page in landing page." class="img-responsive">
+          </p>
+          <p>
+            <img src="img/hero-login.jpg" alt="hero page in log in page." class="img-responsive">
           </p>
         </section>
         <section>
