add navigation to our website in styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -35,7 +35,7 @@
             <li>
               <a href="styleguide.html#imagery" class="sg-nav__item sg-nav__item--anchor">Imagery</a>
             </li>
-          
+
             <li>
               <a href="styleguide.html#paragraph" class="sg-nav__item sg-nav__item--anchor">Paragraph</a>
             </li>
@@ -65,6 +65,9 @@
             </li>
             <li>
               <a href="citations.html" class="sg-nav__item sg-nav__item--page">Citations</a>
+            </li>
+            <li>
+              <a href="index.html" class="sg-nav__item sg-nav__item--page">Website</a>
             </li>
           </ul>
         </nav>
