--- a/citations.html
+++ b/citations.html
@@ -57,6 +57,19 @@
             Moksha Yoga Vancouver &ldquo;Hot Hatha Songs and Gongs&rdquo; <em>  Moksha Yoga Vancouver</em>, 2018 <a href="https://vancouver.mokshayoga.ca/event/hot-hatha-songs-and-gongs/" target="_blank">https://vancouver.mokshayoga.ca/event/hot-hatha-songs-and-gongs/
             </a>.
           </li>
+          <li>
+            Jozef Polc &ldquo;Hero image in gym environment section&rdquo; <em>  500px</em> <a href="https://drscdn.500px.org/photo/229742167/q%3D80_h%3D450/v2?webp=true&sig=d05d59294798d76728d4e7ca41dba4a075ff73a6f8d1c3a63996b47fb8f5caab" target="_blank">https://drscdn.500px.org/photo/229742167/q%3D80_h%3D450/v2?webp=true&sig=d05d59294798d76728d4e7ca41dba4a075ff73a6f8d1c3a63996b47fb8f5caab
+            </a>.
+          </li>
+          <li>
+            Stock Photo  &ldquo;Pair of young adult women doing abdominal muscle Russian twist exercises&rdquo; <em>  123RF</em> <a href="https://www.123rf.com/photo_76321532_pair-of-young-adult-women-doing-abdominal-muscle-russian-twist-exercises-while-holding-weights.html?fromid=bHBtdFZhVWJjR3BJYVJnNlVQUmJ0Zz09" target="_blank">https://www.123rf.com/photo_76321532_pair-of-young-adult-women-doing-abdominal-muscle-russian-twist-exercises-while-holding-weights.html?fromid=bHBtdFZhVWJjR3BJYVJnNlVQUmJ0Zz09
+            </a>.
+          </li>
+          <li>
+            Stock Photo  &ldquo;Hero image in gym environment section&rdquo; <em>  500px</em> <a href="https://drscdn.500px.org/photo/24729731/q%3D80_m%3D2000/v2?client_application_id=15699&webp=true&sig=20a322f340ab4a76dd0db05f012652c915dbd6fee853fc9ead05d0e7d866022f" target="_blank">https://drscdn.500px.org/photo/24729731/q%3D80_m%3D2000/v2?client_application_id=15699&webp=true&sig=20a322f340ab4a76dd0db05f012652c915dbd6fee853fc9ead05d0e7d866022f
+            </a>.
+          </li>
+
         </ul>
         <footer>
           <p class="sg-footer-content">
