update link while clicking the images

--- a/join.html
+++ b/join.html
@@ -107,17 +107,23 @@
           <div class="listings row">
             <div class="listings__item col col--4md">
               <div class="listings__image-content">
-                <img src="img/gym-environment1.jpg" alt="gym environment1" class="img-responsive">
+                <a href="img/gym-environment1.jpg" target="_blank">
+                  <img src="img/gym-environment1.jpg" alt="gym environment1" class="img-responsive">
+                </a>
               </div>
             </div>
             <div class="listings__item col col--4md">
               <div class="listings__image-content ">
-                <img src="img/gym-environment2.jpg" alt="gym environment1" class="img-responsive">
+                <a href="img/gym-environment2.jpg" target="_blank">
+                  <img src="img/gym-environment2.jpg" alt="gym environment1" class="img-responsive">
+                </a>
               </div>
             </div>
             <div class="listings__item col col--4md">
               <div class="listings__image-content">
-                <img src="img/gym-environment3.jpg" alt="gym environment1" class="img-responsive">
+                <a href="img/gym-environment3.jpg" target="_blank">
+                  <img src="img/gym-environment3.jpg" alt="gym environment1" class="img-responsive">
+                </a>
               </div>
             </div>
           </div>
