--- a/join.html
+++ b/join.html
@@ -162,7 +162,7 @@
           Great physique awaits you.
         </p>
         <p class="footer_copyright">
-          &copy; 2018
+          &copy; Created by Charlie Chao and Lance Zheng for IAT339.
         </p>
         <p class="footer__cta">
 
