--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
         </p>
 
         <p class="footer_copyright">
-          &copy; 2018
+          &copy; Created by Charlie Chao and Lance Zheng for IAT339.
         </p>
         <p class="footer__cta">
 
