--- a/events.html
+++ b/events.html
@@ -115,7 +115,7 @@
           </a>
         </p>
         <p class="footer_copyright">
-          &copy; 2018
+          &copy; Created by Charlie Chao and Lance Zheng for IAT339.
         </p>
         <p class="footer__cta">
 
