add training listing

--- a/styleguide.html
+++ b/styleguide.html
@@ -613,6 +613,87 @@
   &lt;/li&gt;
 &lt;/ul&gt;</code></pre>
           </div>
+
+            <div class="sg-component-preview">
+              <h2>Training</h2>
+              <p>
+                Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
+              </p>
+              <ul class="listings row">
+                <li class="listings__item listings__item--alt col col--6md">
+                  <p class="listings__item-content ">
+                    <span class="listings__item-title">$90/ea</span>
+                    <span class="listings__item-prop">for 3 sessions</span>
+                  </p>
+                </li>
+                <li class="listings__item listings__item--alt col col--6md">
+                  <p class="listings__item-content ">
+                    <span class="listings__item-title">$85/ea</span>
+                    <span class="listings__item-prop">for 9 sessions</span>
+                  </p>
+                </li>
+                <li class="listings__item listings__item--alt col col--6md">
+                  <p class="listings__item-content ">
+                    <span class="listings__item-title">$75/ea</span>
+                    <span class="listings__item-prop">for 48 sessions</span>
+                  </p>
+                </li>
+                <li class="listings__item listings__item--alt col col--6md">
+                  <p class="listings__item-content ">
+                    <span class="listings__item-title">$70/ea</span>
+                    <span class="listings__item-prop">for 96 sessions</span>
+                  </p>
+                </li>
+              </ul>
+              <p>
+                Sign up for membership first and you'll be able to add sessions from your dashboard online.
+              </p>
+              <p>
+                <a href="join.html" class="btn">
+                  Join Now
+                </a>
+              </p>
+            </div>
+            <pre><code>
+              &lt;h2&gt;Training&lt;/h2&gt;
+              &lt;p&gt;
+                Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
+              &lt;/p&gt;
+              &lt;ul class="listings row"&gt;
+                &lt;li class="listings__item listings__item--alt col col--6md"&gt;
+                    &lt;p class="listings__item-content "&gt;
+                      &lt;span class="listings__item-title"&gt;$90/ea&lt;/span&gt;
+                    &lt;span class="listings__item-prop"&gt;for 3 sessions&lt;/span&gt;
+                  &lt;/p&gt;
+                  &lt;/li&gt;
+                &lt;li class="listings__item listings__item--alt col col--6md"&gt;
+                  &lt;p class="listings__item-content "&gt;
+                    &lt;span class="listings__item-title"&gt;$85/ea&lt;/span&gt;
+                    &lt;span class="listings__item-prop"&gt;for 9 sessions&lt;/span&gt;
+                    &lt;/p&gt;
+                &lt;/li&gt;
+                &lt;li class="listings__item listings__item--alt col col--6md"&gt;
+                    &lt;p class="listings__item-content "&gt;
+                    &lt;span class="listings__item-title"&gt;$75/ea&lt;/span&gt;
+                    &lt;span class="listings__item-prop"&gt;for 48 sessions&lt;/span&gt;
+                  &lt;/p&gt;
+                &lt;/li&gt;
+                &lt;li class="listings__item listings__item--alt col col--6md"&gt;
+                  &lt;p class="listings__item-content "&gt;
+                    &lt;span class="listings__item-title"&gt;$70/ea&lt;/span&gt;
+                    &lt;span class="listings__item-prop"&gt;for 96 sessions&lt;/span&gt;
+                  &lt;/p&gt;
+                &lt;/li&gt;
+              &lt;/ul&gt;
+              &lt;p&gt;
+                Sign up for membership first and you'll be able to add sessions from your dashboard online.
+              &lt;/p&gt;
+              &lt;p&gt;
+                &lt;a href="join.html" class="btn"&gt;
+                  Join Now
+                &lt;/a&gt;
+              &lt;/p&gt;
+            </code></pre>
         </section>
         <section>
           <h2 id="grid">
@@ -695,7 +776,7 @@
         </section>
         <footer>
           <p class="sg-footer-content">
-            Created by Charlie Chao and Lance Zheng for IAT339.
+            Created by Charlie Chao and Lance Zheng
           </p>
         </footer>
       </div>
