--- a/citations.html
+++ b/citations.html
@@ -73,7 +73,7 @@
         </ul>
         <footer>
           <p class="sg-footer-content">
-            Created by Charlie Chao and Lance Zheng for IAT339.
+            Created by Charlie Chao and Lance Zheng
           </p>
         </footer>
       </div>
