--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </a>
         </p>
         <p class="footer_copyright">
-          &copy; Created by Charlie Chao and Lance Zheng for IAT339.
+          &copy; Created by Charlie Chao and Lance Zheng
         </p>
         <p class="footer__cta">
 
