--- a/styleguide.html
+++ b/styleguide.html
@@ -617,7 +617,8 @@
             <div class="sg-component-preview">
               <h2>Training</h2>
               <p>
-                Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
+                Our personal training packages lets you reach your goal faster by pairing
+                 up with one of our super-qualified coaches. Here are our affordable pricing tiers:
               </p>
               <ul class="listings row">
                 <li class="listings__item listings__item--alt col col--6md">
@@ -654,46 +655,118 @@
                 </a>
               </p>
             </div>
+            <div class="sg-component-code">
+                <p class="sg-component-label">Code</p>
             <pre><code>
-              &lt;h2&gt;Training&lt;/h2&gt;
-              &lt;p&gt;
-                Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
-              &lt;/p&gt;
-              &lt;ul class="listings row"&gt;
-                &lt;li class="listings__item listings__item--alt col col--6md"&gt;
-                    &lt;p class="listings__item-content "&gt;
-                      &lt;span class="listings__item-title"&gt;$90/ea&lt;/span&gt;
-                    &lt;span class="listings__item-prop"&gt;for 3 sessions&lt;/span&gt;
-                  &lt;/p&gt;
-                  &lt;/li&gt;
-                &lt;li class="listings__item listings__item--alt col col--6md"&gt;
-                  &lt;p class="listings__item-content "&gt;
-                    &lt;span class="listings__item-title"&gt;$85/ea&lt;/span&gt;
-                    &lt;span class="listings__item-prop"&gt;for 9 sessions&lt;/span&gt;
-                    &lt;/p&gt;
-                &lt;/li&gt;
-                &lt;li class="listings__item listings__item--alt col col--6md"&gt;
-                    &lt;p class="listings__item-content "&gt;
-                    &lt;span class="listings__item-title"&gt;$75/ea&lt;/span&gt;
-                    &lt;span class="listings__item-prop"&gt;for 48 sessions&lt;/span&gt;
-                  &lt;/p&gt;
-                &lt;/li&gt;
-                &lt;li class="listings__item listings__item--alt col col--6md"&gt;
-                  &lt;p class="listings__item-content "&gt;
-                    &lt;span class="listings__item-title"&gt;$70/ea&lt;/span&gt;
-                    &lt;span class="listings__item-prop"&gt;for 96 sessions&lt;/span&gt;
-                  &lt;/p&gt;
-                &lt;/li&gt;
-              &lt;/ul&gt;
-              &lt;p&gt;
-                Sign up for membership first and you'll be able to add sessions from your dashboard online.
-              &lt;/p&gt;
-              &lt;p&gt;
-                &lt;a href="join.html" class="btn"&gt;
-                  Join Now
-                &lt;/a&gt;
-              &lt;/p&gt;
+  &lt;h2&gt;Training&lt;/h2&gt;
+  &lt;p&gt;
+     Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
+  &lt;/p&gt;
+  &lt;ul class="listings row"&gt;
+    &lt;li class="listings__item listings__item--alt col col--6md"&gt;
+      &lt;p class="listings__item-content "&gt;
+        &lt;span class="listings__item-title"&gt;$90/ea&lt;/span&gt;
+        &lt;span class="listings__item-prop"&gt;for 3 sessions&lt;/span&gt;
+      &lt;/p&gt;
+    &lt;/li&gt;
+    &lt;li class="listings__item listings__item--alt col col--6md"&gt;
+      &lt;p class="listings__item-content "&gt;
+        &lt;span class="listings__item-title"&gt;$85/ea&lt;/span&gt;
+        &lt;span class="listings__item-prop"&gt;for 9 sessions&lt;/span&gt;
+      &lt;/p&gt;
+    &lt;/li&gt;
+    &lt;li class="listings__item listings__item--alt col col--6md"&gt;
+      &lt;p class="listings__item-content "&gt;
+        &lt;span class="listings__item-title"&gt;$75/ea&lt;/span&gt;
+        &lt;span class="listings__item-prop"&gt;for 48 sessions&lt;/span&gt;
+      &lt;/p&gt;
+    &lt;/li&gt;
+    &lt;li class="listings__item listings__item--alt col col--6md"&gt;
+      &lt;p class="listings__item-content "&gt;
+        &lt;span class="listings__item-title"&gt;$70/ea&lt;/span&gt;
+        &lt;span class="listings__item-prop"&gt;for 96 sessions&lt;/span&gt;
+      &lt;/p&gt;
+    &lt;/li&gt;
+  &lt;/ul&gt;
+  &lt;p&gt;
+   Sign up for membership first and you'll be able to add sessions from your dashboard online.
+  &lt;/p&gt;
+  &lt;p&gt;
+    &lt;a href="join.html" class="btn"&gt;
+    Join Now
+    &lt;/a&gt;
+  &lt;/p&gt;
             </code></pre>
+          </div>
+            <div class="sg-component-preview">
+              <h2>Our Team</h2>
+              <div class="team-group row">
+                <div class="team-item col col--6md">
+                  <div class="team-item__content--alt">
+                    <div class="team-item__photo">
+                      <img src="img/about-nam.jpg" alt="Nam Zakaria" class="img-responsive">
+                    </div>
+                    <div class="team-item__info">
+                      <p>
+                        <strong>Nam Zakaria</strong><br>
+                        Founder
+                      </p>
+                      <p class="team-item__bio">
+                        Nam is the founder of Mighty Life Fitness. He specializes in powerlifting and nutrition. His qualifications include CPTS, CrossFit, TRX and CFES-WT.
+                      </p>
+                  </div>
+                  </div>
+                </div>
+                <div class="team-item col col--6md">
+                  <div class="team-item__content--alt">
+                    <div class="team-item__photo">
+                      <img src="img/about-michelle.jpg" alt="Michelle Barret" class="img-responsive">
+                    </div>
+                    <div class="team-item__info">
+                      <p>
+                        <strong>Michelle Barret</strong><br>
+                        Trainer
+                      </p>
+                      <p class="team-item__bio">
+                        Michelle is a fitness coach with over 10 years of experience. She has a BA in Human Kinetics from UBC and is certified BCRPA-SFL, TRX, CPR &amp; AED.
+                      </p>
+                  </div>
+                  </div>
+                </div>
+                <div class="team-item col col--6md">
+                  <div class="team-item__content--alt">
+                    <div class="team-item__photo">
+                      <img src="img/about-jal.jpg" alt="Jal Nasr" class="img-responsive">
+                    </div>
+                    <div class="team-item__info">
+                      <p>
+                        <strong>Jal Nasr</strong><br>
+                        Trainer
+                      </p>
+                      <p class="team-item__bio">
+                        Jal is trainer with over 5 years of experience. He is certified in CanFitPro, TRX, Sandbell, CPR &amp; AED and dotFIT.
+                      </p>
+                  </div>
+                  </div>
+                </div>
+                <div class="team-item col col--6md">
+                  <div class="team-item__content--alt">
+                    <div class="team-item__photo">
+                      <img src="img/about-josh.jpg" alt="Josh Jackman" class="img-responsive">
+                    </div>
+                    <div class="team-item__info">
+                      <p>
+                        <strong>Josh Jackman</strong><br>
+                        Trainer
+                      </p>
+                      <p class="team-item__bio">
+                        Josh is a graduate from Camosun College with a Sports Performance Diploma. He is certified in NASM, Agatsu kettlebell, CPR &amp; AED.
+                      </p>
+                  </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </section>
         <section>
           <h2 id="grid">
